--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18",
     "nuxt": "^3.6.0",
+    "nuxt-icon": "^0.4.1",
     "typescript": "latest"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "flowbite": "^1.6.6",
+    "pinia": "^2.1.4",
+    "vazirmatn": "^33.0.3"
   }
 }
