--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@splidejs/vue-splide": "^0.6.12",
     "flowbite": "^1.6.6",
     "pinia": "^2.1.4",
-    "vazirmatn": "^33.0.3"
+    "swiper": "^9.4.1",
+    "vazirmatn": "^33.0.3",
+    "vue-awesome-swiper": "^5.0.1"
   }
 }
