--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@splidejs/vue-splide": "^0.6.12",
+    "@types/prismjs": "^1.26.0",
     "flowbite": "^1.6.6",
     "pinia": "^2.1.4",
-    "swiper": "^9.4.1",
+    "prismjs": "^1.29.0",
     "vazirmatn": "^33.0.3",
-    "vue-awesome-swiper": "^5.0.1"
+    "vue-prism-editor": "^1.3.0",
+    "vue-prismjs": "^1.2.0"
   }
 }
